Refactor functions names
