# app/Http/Routes/Api.php
@@ -14,7 +14,7 @@ class Api extends AbstractRouter
     {
         $this->getRouter()->get(
             '/vehicles/{modelYear}/{manufacturer}/{model}',
-            'VehiclesController@findAllByAttributes'
+            'VehiclesController@findAll'
         );
     }
 
